crates/capsec/tests/compile_fail/cap_is_not_sync.stderr
error[E0277]: `*const ()` cannot be shared between threads safely
 --> tests/compile_fail/cap_is_not_sync.rs:7:19
  |
7 |     assert_sync::<Cap<FsRead>>();
  |                   ^^^^^^^^^^^ `*const ()` cannot be shared between threads safely
  |
  = help: within `capsec::Cap<capsec::FsRead>`, the trait `Sync` is not implemented for `*const ()`
note: required because it appears within the type `PhantomData<*const ()>`
 --> $RUST/core/src/marker.rs
note: required because it appears within the type `capsec::Cap<capsec::FsRead>`
 --> $WORKSPACE/crates/capsec-core/src/cap.rs
  |
  | pub struct Cap<P: Permission> {
  |            ^^^
note: required by a bound in `assert_sync`
 --> tests/compile_fail/cap_is_not_sync.rs:4:19
  |
4 | fn assert_sync<T: Sync>() {}
  |                   ^^^^ required by this bound in `assert_sync`
